# libphoenix

./: .gitignore  README.md  autogen.sh  configure.ac
src/: Makefile.am  connection.c  db.c  db_commands.c  db_commands.h  debug.h  http.c  mqtt.c  phoenix.h  provisioning.c  version.h
test/: Makefile.am  generate_key.c  reference_device.c  test_certificate.c  test_database.c
